[lc-14] - A11y fixes for idm, add fix for pagination contrast, add btn-primary class back on to elemetns, override css import moved to allow contrast fix items to take precedence

--- a/src/main/resources/static/styles/override.css
+++ b/src/main/resources/static/styles/override.css
@@ -15,3 +15,11 @@
 .btn-link-contrast-fix:hover {
     color: #007BC7;
 }
+
+.page-link-contrast-fix {
+    color: #007BC7;
+}
+
+.page-link-contrast-fix:hover {
+    color: #007BC7;
+}
